--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: A. MacLeay
 author: Andrew Kenneth MacLeay, Esq.
-email: a.macleay@gmail.com
+email: a.macleay@protonmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal site of Andrew Kenneth MacLeay
 baseurl: "" # the subpath of your site, e.g. /blog
